# Aegolius

./: .readthedocs.yaml  CHANGELOG.md  COPYRIGHT  README.md  mkdocs.yml
Code/examples/: aegolius_install.ipynb
Code/examples/2D/: basics_2D.ipynb  basics_2D.py  candy_cane_2D.ipynb  candy_cane_2D.py  finite_infinite_repetitions_2D.ipynb  finite_infinite_repetitions_2D.py  hourglass_2D.ipynb  hourglass_2D.py  mirror_symmetry_2D.ipynb  mirror_symmetry_2D.py  ngon_2D.ipynb  ngon_2D.py  olympic_rings_2D.ipynb  (+11 more)
Code/spomso/: COPYRIGHT  LICENSE_NOTICE  pyproject.toml  setup.py
Code/spomso/spomso/: helper_functions.py  modifications_jax.py  sdf_2D_jax.py  sdf_3D_jax.py  transformations_jax.py
Code/spomso/spomso/cores/: __init__.py  combine.py  geom.py  geom_2d.py  geom_3d.py  geom_core_2d_direct.py  geom_core_3d_direct.py  geom_vector.py  geom_vector_special.py  helper_functions.py  modifications.py  post_processing.py  sdf_2D.py  sdf_3D.py  transformations.py  triangulation_functions.py  vector_functions.py  vector_functions_special.py  vector_modification_functions.py
Code/spomso/spomso/jax_cores/: __init__.py  combine_jax.py  helper_functions.py  modifications_jax.py  post_processing_jax.py  sdf_2D_jax.py  sdf_3D_jax.py  transformations_jax.py
Files/point_clouds/: terrain_lr.npy
docs/: Acknowledgements.md  Citing.md  Download.md  Introduction.md  License_and_Copyright.md  index.md  requirements.txt
docs/Automatic_Differentiation_Tutorials/: Introduction.md
docs/SDF_Tutorials/: Advanced.md  Combining_Geometry.md  Custom_Functions.md  Introduction.md  Modifications.md  Point_Clouds.md  Post_Processing.md
docs/User_Interface/: 2D_SDFs.md  3D_SDFs.md  Combinations.md  Geometry.md  Helper_Functions.md  SDF_Modifications.md  SDF_PostProcessing.md  SDF_Transform.md  VectorFields.md
docs/User_Interface_Automatic_Differentiation/: 2D_SDFs.md  3D_SDFs.md  Combinations.md  Helper_Functions.md  SDF_Modifications.md  SDF_PostProcessing.md  SDF_Transform.md
docs/Vector_Fields_Tutorials/: Introduction.md
(+156 files in other folders)
