[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SPOMSO"
version = "1.3.1"
authors = [
    { name = "Peter Ropač", email = "peter.ropac@fmf.uni-lj.si" }
]
description = "Python package for generating geometry and vector fields with SDFs."
requires-python = ">=3.12"
keywords = ["python", "geometry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
autodiff = ["jax", "jaxlib"]
plot = ["matplotlib", "plotly"]
all = ["jax", "jaxlib", "matplotlib", "plotly"]

[project.urls]
Repository = "https://github.com/peterropac/Aegolius"

[tool.setuptools.packages.find]
where = ["."]
include = ["spomso*"]