[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SPOMSO"
version = "1.4.0"
authors = [
    { name = "Peter Ropač", email = "peter.ropac@fmf.uni-lj.si" }
]
description = "Python package for generating geometry and vector fields with SDFs."
requires-python = ">=3.12"
keywords = ["python", "geometry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
autodiff = ["jax", "jaxlib", "optax"]
plot = ["matplotlib", "plotly"]
all = ["jax", "jaxlib", "matplotlib", "plotly"]

[project.urls]
Homepage = "https://github.com/peterropac/Aegolius"
Changelog = "https://github.com/peterropac/Aegolius/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["spomso*"]